Sun Apr  7 22:46:07 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* krshd.c: Add an option -L to pass certain environment variables
		to the client.

Wed Apr  3 17:09:19 1996  Richard Basch  <basch@lehman.com>

	* krlogind.c: Under Solaris, when the connection pipe goes away,
		zero bytes are returned.  Since we are using blocking
		read calls, and the net_read function deals with
		interrupted/resumed reads, consider zero bytes to be
		be a terminated connection, so as not to spin.

Mon Apr  1 10:12:44 1996  Richard Basch  <basch@lehman.com>

	* loginpaths.h: Leading/trailing colons should not be there based
	on the variable usage in the code.  Also, the tests for Solaris
	were incorrect.

Sat Mar 23 17:20:00 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* krcp.c (des_write): Use krb5_net_write instead of write, because
 	most parts of rcp that call this code ignore the return value and
 	we want to reblock properly.

	* krshd.c (doit): Don't use non-blocking IO; it is unnecessary and
 	may cause problems.

Fri Mar 22 13:27:40 1996  Richard Basch  <basch@lehman.com>

	* krshd.c: use the library routines to do v4 to v5
	principal translation, for a more accurate representation.

Wed Mar 20 19:36:21 1996  Richard Basch  <basch@lehman.com>

	* krlogind.c: use the library routines to do v4 to v5
	principal translation, for a more accurate representation.

Tue Mar 19 20:11:28 1996  Richard Basch  <basch@lehman.com>

	* kcmd.c (ruserok): declare the function as taking const char *
	instead of char * (Solaris 2.5 refuses to compile it, otherwise).

Tue Mar 12 23:42:50 1996  Ken Raeburn  <raeburn@cygnus.com>

	* configure.in: Use AC_HEADER_STDARG.

Tue Mar 12 17:52:08 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* krshd.c (doit): For encrypted rcp, fix logic in determining
		executable to run. 

Mon Feb 26 03:28:44 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in: call USE_ANAME.

Sun Feb 25 18:50:45 1996  Sam Hartman  <hartmans@tertius.mit.edu>
